Added view for completed chores as well as non complete chores for admin. Added after image to details view for completed chores so admin can see after pictures. Added partial buttons for these new views. Deleted old data and added some new demo data demonstrating new functionality.

--- a/ChoreChampion/ChoreChampion.csproj
+++ b/ChoreChampion/ChoreChampion.csproj
@@ -28,6 +28,7 @@
 
   <ItemGroup>
     <Folder Include="Controllers\" />
+    <Folder Include="wwwroot\images\AfterImages\" />
   </ItemGroup>
 
 </Project>
